Respect component boundaries and fix some alignments

--- a/planetwars/visualizer/bin/main.global.scss
+++ b/planetwars/visualizer/bin/main.global.scss
@@ -2,6 +2,7 @@ html,
 body {
   width: 100vw;
   height: 100vh;
+  margin: 0;
 }
 
 #root {
