--- a/planetwars/visualizer/src/components/controls.scss
+++ b/planetwars/visualizer/src/components/controls.scss
@@ -1,35 +1,46 @@
 @import '../app.global.scss';
-
 $altBackground: lighten($background, 5);
 $sliderBg: lighten($background, 15);
 // TODO: try to put this in some global style
 $sliderFg: #1f77b4;
 
-.controlBar {
+.controls {
   position: absolute;
-  height: 6vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  bottom: 4vh;
-  width: 99.8%;
+  justify-content: space-between;
+  align-items: center;
+  // height: 8vh;
+  bottom: 0%;
+
   .turnSlider {
-    width: 100%;
+    width: 95%;
   }
+
   .controlButtons {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    width: 95%;
+
     .turnControls {
       display: flex;
       min-width: 220px;
+      justify-content: space-between;
+      align-items: center;
       width: 25%;
     }
+
     .speedControls {
       display: flex;
+      justify-content: space-between;
+      align-items: center;
       float: right;
       width: 15%;
     }
+
     .button {
       width: 15%;
       height: 40px;
@@ -37,12 +48,14 @@ $sliderFg: #1f77b4;
       font-size: 1vw;
       border-width: 0;
     }
+
     .button:focus {
       border-width: 0;
       background-color: $background;
       color: $text;
       box-shadow: none;
     }
+
     .speed {
       padding-right: 10px;
     }
@@ -60,9 +73,11 @@ input[type=range] {
   width: 100%;
   margin: 13.8px 0;
 }
+
 input[type=range]:focus {
   outline: none;
 }
+
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 5px;
@@ -70,6 +85,7 @@ input[type=range]::-webkit-slider-runnable-track {
   background: $sliderBg;
   border-radius: 2.5px;
 }
+
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 5px;
@@ -77,6 +93,7 @@ input[type=range]::-moz-range-track {
   background: $sliderBg;
   border-radius: 2.5px;
 }
+
 input[type=range]::-webkit-slider-thumb {
   width: 20px;
   height: 20px;
@@ -86,6 +103,7 @@ input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   margin-top: -7.5px;
 }
+
 input[type=range]::-moz-range-thumb {
   width: 20px;
   height: 20px;
@@ -94,18 +112,22 @@ input[type=range]::-moz-range-thumb {
   cursor: pointer;
   margin-top: -7.5px;
 }
+
 input[type=range]:hover::-webkit-slider-runnable-track {
   height: 8px;
 }
+
 input[type=range]:hover::-moz-range-track {
   height: 8px;
 }
+
 input[type=range]:hover::-webkit-slider-thumb {
   width: 25px;
   height: 25px;
   margin-top: -8.5px;
   border-radius: 12.5px;
 }
+
 input[type=range]:hover::-moz-range-thumb {
   width: 25px;
   height: 25px;
