--- a/planetwars/visualizer/src/components/visualizer.scss
+++ b/planetwars/visualizer/src/components/visualizer.scss
@@ -1,11 +1,12 @@
 .visualizer {
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: stretch;
     justify-content: space-between;
     width: 100%;
     height: 100%;
-      
+
     .endCard {
         position: absolute;
         top: 30vh;
@@ -20,15 +21,18 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
         p {
             width: 100%;
         }
+
         button {
             position: absolute;
             top: -12.5px;
             right: -12.5px;
         }
     }
+
     .close {
         outline: none;
         width: 25px;
@@ -40,4 +44,3 @@
         border: 0;
     }
 }
-
